2010-12-07  Jessie Berlin  <jberlin@apple.com>

        Build fix. Unreviewed.

        * WebKit2.pro:
        Added WebDatabaseManagerQt.cpp.
        * WebProcess/WebCoreSupport/qt/WebDatabaseManagerQt.cpp: Added.
        (WebKit::WebDatabaseManager::databaseDirectory):
        Added a FIXME to implement and return an empty string.

2010-12-07  Darin Adler  <darin@apple.com>

        Get a bit closer to making Qt WebKit2 compile again.

        * WebKit2.pro: Add the WebDatabaseManager source files.
        Still missing: The Qt version of the databaseDirectory function.

2010-12-07  Jessie Berlin  <jberlin@apple.com>

        Reviewed by Darin Adler.

        WebKit2: Need to set the location of the Databases directory when the WebProcess is initialized
        https://bugs.webkit.org/show_bug.cgi?id=50604

        * WebProcess/WebCoreSupport/WebDatabaseManager.cpp: Added.
        (WebKit::WebDatabaseManager::shared):
        (WebKit::WebDatabaseManager::WebDatabaseManager):
        Initialize the DatabaseTracker with the Database directory.
        * WebProcess/WebCoreSupport/WebDatabaseManager.h: Added.
        * WebProcess/WebCoreSupport/mac/WebDatabaseManagerMac.mm: Added.
        (WebKit::WebDatabaseManager::databaseDirectory):
        Copied from WebKitInitializeDatabasesIfNecessary in WebKit/mac/Storage/WebDatabaseManager.mm.
        * WebProcess/WebCoreSupport/win/WebDatabaseManagerWin.cpp: Added.
        (WebKit::WebDatabaseManager::databaseDirectory):
        Copied from WebKitInitializeWebDatabasesIfNecessary in WebKit/win/WebDatabaseManager.cpp.

        * WebProcess/WebProcess.cpp:
        (WebKit::WebProcess::WebProcess):
        Make sure that the Databases directory has been set by calling WebDatabaseManager::shared().

        * WebKit2.xcodeproj/project.pbxproj:
        Add WebDatabaseManager.cpp/.h/Mac.cpp
        * win/WebKit2.vcproj:
        Add WebDatabaseManager.cpp/.h/Win.cpp

2010-12-06  Darin Adler  <darin@apple.com>
