@@ -1,3 +1,15 @@
+2010-12-07  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        fast/loader/empty-embed-src-attribute.html asserts in debug builds
+        https://bugs.webkit.org/show_bug.cgi?id=50643
+
+        Just always ignore attempts to load requests with empty URLs.
+
+        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
+        (WebKit::WebFrameLoaderClient::dispatchDecidePolicyForNavigationAction):
+
 2010-12-07  Jessie Berlin  <jberlin@apple.com>
 
         Build fix. Unreviewed.
